--- a/prototype.html
+++ b/prototype.html
@@ -76,7 +76,7 @@
 		head: {
 			width:100,
 			height:200,
-			transform: [['translate',10,20],['rotate',5]]
+			transform: [['translate',10,20],['rotate',30,50,150]]
 		}
 	}
 
@@ -125,13 +125,23 @@
 		r:20
 	})).call(styles({fill:'none', stroke:'green'}))
 
+	stuff.head.append('image').call(attrs({
+		'xlink:href': 'iii.jpg',
+		height: 200,
+		width: 200,
+		x: -20,
+		y: -100
+	}))
+
 	// application de la déco sur le guide
 
 	var scene = d3.select('#container')
 		.append('svg')
 		.call(attrs({
 			id: 'scene',
-			width:400, height:400, viewBox:'0 0 400 400',
+			width: 400,
+			height: 400 ,
+			viewBox: '-200 -200 600 600',
 			'shape-rendering': 'geometricPrecision',
 			'image-rendering': 'optimizeQuality'
 
@@ -167,6 +177,7 @@
 		console.log('done')
 	})
 
+	scene.selectAll('.guide').remove()
 
 	var container = document.getElementById('container')
 	var svgString = new XMLSerializer().serializeToString(scene.node());
